--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
  <head>
   <meta charset="utf-8"><!--void element/character spec-->
    <title>Default Title</title>
-    <link rel="stylesheet" href="styling.css" />
-
-</head>
+    <link rel="stylesheet" href="styling.css" />  
+     </head>
 <body>
 <div id="container">
 <header>
@@ -56,6 +55,7 @@
                      <li>JSON</li>
                </ul> 
                  </div>
+                   </div>
                  
 </body>
 </html>
